fix: layout shift

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,3 +1,3 @@
-.layout {
-  min-height: 100dvh;
+.layout.layout {
+  flex-direction: row;
 }
